--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -7,15 +7,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-frontend/node_modules
-backend/node_modules
-backend/.env
+node_modules
 dist
 dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/
+.vscode/*
+!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
