--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,8 @@
     "express": "^5.1.0",
     "leetcode-query": "^2.0.1",
     "mongoose": "^8.16.0",
-    "puppeteer": "^24.17.1"
+    "puppeteer": "^24.17.1",
+    "redis": "^5.8.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
